# TRV2

./: .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  build.py  cpp.hint  encoding.py
.github/workflows/: cmake.yml
Resources/Shaders/: bloom.frag  blur.frag  brick.frag  circle.frag  perlinNoise.frag  procedure.vert  pure.frag  rock.frag  shadowBlend.frag  shadow_temporal_blend.frag  sprite2d.frag  sprite2d.vert  spritepure.frag
TREngine/: CMakeLists.txt  TREngine.cpp  TREngine.h  TREngine_Interfaces.h
TREngine/Assets/: AssetsManager.h
TREngine/Assets/Loaders/: OpenGLShaderLoader.h
TREngine/Configs/: ClientConfig.h
TREngine/Core/Interfaces/: ITRWindow.h
TREngine/Core/TRWindow/: OpenGLWindow.h
TREngine/Graphics/: OpenGLTRGameGraphicsAPI.cpp  OpenGLTRGameGraphicsAPI.h
TREngine/Graphics/Interfaces/: ITRGameGraphicsAPIGenerator.h  ITRGameGraphicsAPIUtils.h  ITRGraphicsDevice.h
TREngine/Graphics/Renderers/: BatchInfo.h  OpenGLSpriteRenderer.h
TRGame/: TRGame.cpp  TRGame.h  main.cpp
TRGame/Worlds/: GameWorld.h
TRV2/: CMakeLists.txt  TRV2.cpp  TRV2.h  main.cpp
ext/glad/: CMakeLists.txt
ext/libs/glad/: CMakeLists.txt  glad.c
src/: TRGame.cpp  TRGame.h  TRV2.h  main.cpp
src/Assets/: AssetsManager.cpp  AssetsManager.h
src/Assets/Loaders/: OpenGLShaderLoader.h
src/Config/: ClientConfig.cpp  ClientConfig.h
src/Configs/: ClientConfig.cpp  ClientConfig.h  CompileTimeConfig.h.in
src/Core/: OpenGLTRGameGraphicsAPI.cpp  OpenGLTRGameGraphicsAPI.h
src/Core/Interfaces/: ITRWindow.h
src/Core/TRWindow/: OpenGLWindow.cpp
src/Game/Worlds/: GameWorld.cpp  GameWorld.h  Tile.h
src/Graphics/: OpenGLTRGameGraphicsAPI.cpp  OpenGLTRGameGraphicsAPI.h  OpenGLWindow.cpp  OpenGLWindow.h
src/Graphics/GraphicsDevices/: OpenGLGraphicsDevice.cpp  OpenGLGraphicsDevice.h
src/Graphics/GraphicsInterface/: IGraphicsDevice.h  OpenGLGraphicsDevice.cpp  OpenGLGraphicsDevice.h
src/Graphics/Interfaces/: ITRGameGraphicsAPI.h  ITRGameGraphicsAPIGenerator.h  ITRGameGraphicsAPIUtils.h  ITRGraphicsDevice.h
src/Graphics/Renderers/: OpenGLSpriteRenderer.cpp  OpenGLSpriteRenderer.h
src/Graphics/Shaders/: OpenGLShader.h
src/TREngine/: Application.h  Application.hpp  CMakeLists.txt  Core.h  Core.hpp  Engine.cpp  Engine.h  Engine.hpp  Engine_Interfaces.hpp  Interfaces.h  TRApplication.h  TRApplication.hpp  TREngine.cpp  TREngine.h  TREngine.hpp  TREngine_Interfaces.h  TREngine_Interfaces.hpp
src/TREngine/Assets/: AssetsManager.cpp  AssetsManager.h  AssetsManager.hpp  Assets_Interfaces.h
src/TREngine/Assets/Converters/: AssetsConverter.h
src/TREngine/Assets/Loaders/: OpenGLShaderLoader.cpp  OpenGLShaderLoader.h  OpenGLTextureLoader.cpp  OpenGLTextureLoader.h
src/TREngine/Assets/ResourceConvert/: OpenGLRawShader.cpp  OpenGLRawShader.h
src/TREngine/Configs/: ClientConfig.cpp  ClientConfig.h  EngineSettings.cpp  EngineSettings.h  EngineSettings.hpp
src/TREngine/Core/: Core_Interfaces.h  assets.h  gameplay.h  render.h
src/TREngine/Core/Assets/: AssetsManager.cpp
src/TREngine/Core/GameTimer/: GLFWGameTimer.h
src/TREngine/Core/GameWindow/: GLFWGameWindow.cpp  GLFWGameWindow.h
src/TREngine/Core/Gamplay/: InputController.cpp  InputController.h
src/TREngine/Core/Initializer/: GLFWInitializer.cpp  GLFWInitializer.h
src/TREngine/Core/InputController/: GLFWInputController.cpp  GLFWInputController.h  OpenGLInputController.cpp  OpenGLInputController.h
src/TREngine/Core/Interfaces/: IInputController.h  ITRWindow.h
src/TREngine/Core/Render/: RenderTarget2D.cpp  RenderTarget2D.h  ShaderProgram.h  SpriteRenderer.cpp  SpriteRenderer.h  Texture2D.cpp  Texture2D.h  UniversalRenderer.cpp  UniversalRenderer.h  render.h
src/TREngine/Core/Structures/: EngineSettings.cpp  EngineSettings.h  Rect.hpp
src/TREngine/Core/TRWindow/: OpenGLWindow.cpp  OpenGLWindow.h
src/TREngine/Core/Utils/: Collision.h  GameTimer.cpp  GameTimer.h  Utils.h
src/TREngine/Core/Utils/Logging/: Logger.cpp  Logger.h
src/TREngine/Graphics/: Graphics_Interfaces.h  Graphics_Interfaces.hpp  OpenGLGraphicsAPI.cpp  OpenGLGraphicsAPI.hpp  OpenGLProvider.cpp  OpenGLProvider.h  OpenGLProvider.hpp  OpenGLTRGameGraphicsAPI.h  TROpenGLAPI.cpp  TROpenGLAPI.h
src/TREngine/Graphics/GraphicsDevices/: OpenGLGraphicsDevice.cpp  OpenGLGraphicsDevice.h  OpenGLGraphicsDevice.hpp
src/TREngine/Graphics/Interfaces/: IShader.h  ISpriteRenderer.h  ITRAPIGenerator.h  ITRAPIUtils.h  ITRGameGraphicsAPIGenerator.h  ITRGameGraphicsAPIUtils.h  ITRGraphicsDevice.h  ITexture2D.h
src/TREngine/Graphics/Renderers/: BatchInfo.h  OpenGLSpriteRenderer.cpp  OpenGLSpriteRenderer.h  SpriteRenderer.cpp  SpriteRenderer.h  SpriteRenderer.hpp
src/TREngine/Graphics/ResourceManager/: OpenGLGraphicsResourceManager.cpp  OpenGLGraphicsResourceManager.h
src/TREngine/Graphics/Shaders/: OpenGLRawShader.cpp  OpenGLRawShader.h  OpenGLRawShader.hpp  OpenGLShader.cpp  OpenGLShader.h  OpenGLShaderProgram.cpp  OpenGLShaderProgram.h  OpenGLShaderProgram.hpp
src/TREngine/Graphics/Structures/: BatchInfo.h  BatchInfo.hpp  VertexLayout.cpp  VertexLayout.h  VertexLayout.hpp
src/TREngine/Graphics/Textures/: OpenGLRenderTarget2D.cpp  OpenGLRenderTarget2D.hpp  OpenGLTexture2D.cpp  OpenGLTexture2D.h  OpenGLTexture2D.hpp
src/TREngine/Platform/: GLFWPlatform.cpp  GLFWPlatform.hpp  GLFWProvider.cpp  GLFWProvider.h  Platform_Interfaces.h  Platform_Interfaces.hpp
src/TREngine/Platform/GameTimer/: GLFWGameTimer.h  GLFWGameTimer.hpp
src/TREngine/Platform/GameWindow/: GLFWGameWindow.cpp  GLFWGameWindow.h  GLFWGameWindow.hpp
src/TREngine/Platform/InputController/: GLFWInputController.cpp  GLFWInputController.h  GLFWInputController.hpp
src/TREngine/Utils/: Utils.hpp
src/TREngine/Utils/Logging/: Logger.cpp  Logger.h  Logger.hpp
src/TREngine/Utils/Structures/: Rect.h  Rect.hpp
src/TRGame/: TRGame.cpp  TRGame.h  TRGame.hpp  TRGame_Interfaces.h  TRGame_Interfaces.hpp  main.cpp
src/TRGame/Configs/: CompileTimeConfig.h.in  VideoSettings.cpp  VideoSettings.h
src/TRGame/Lighting/: Lighting.cpp  (+2 more)
src/Utils/: Logger.h  Utils.h
(+26 files in other folders)
